# elevation_mapping

./: Dockerfile  README.md  compose.yaml  newREADME.md
elevation_mapping/: CMakeLists.txt  elevation_mapping.repos  package.xml
elevation_mapping/include/elevation_mapping/: ElevationMap.hpp  ElevationMapping.hpp  RobotMotionMapUpdater.hpp
elevation_mapping/include/elevation_mapping/input_sources/: Input.hpp  InputSourceManager.hpp
elevation_mapping/include/elevation_mapping/postprocessing/: PostprocessingPipelineFunctor.hpp  PostprocessingWorker.hpp  PostprocessorPool.hpp
elevation_mapping/include/elevation_mapping/sensor_processors/: LaserSensorProcessor.hpp  PerfectSensorProcessor.hpp  SensorProcessorBase.hpp  StereoSensorProcessor.hpp  StructuredLightSensorProcessor.hpp
elevation_mapping/src/: ElevationMap.cpp  ElevationMapping.cpp  RobotMotionMapUpdater.cpp  elevation_mapping_node.cpp
elevation_mapping/src/input_sources/: Input.cpp  InputSourceManager.cpp
elevation_mapping/src/postprocessing/: PostprocessingPipelineFunctor.cpp  PostprocessingWorker.cpp  PostprocessorPool.cpp
elevation_mapping/src/sensor_processors/: LaserSensorProcessor.cpp  PerfectSensorProcessor.cpp  SensorProcessorBase.cpp  StereoSensorProcessor.cpp  StructuredLightSensorProcessor.cpp
elevation_mapping/test/: ElevationMapTest.cpp  ThreadSafeParameterWrapperTest.cpp
elevation_mapping/test/input_sources/: InputSourcesTest.cpp  test_input_sources.cpp
elevation_mapping/test/postprocessing/: PostprocessorTest.cpp  main.cpp
elevation_mapping_demos/: CMakeLists.txt  elevation_mapping_demos.repos  package.xml  setup.cfg  setup.py
elevation_mapping_demos/config/gz_bridge/: leo_ros_gz_bridge.yaml
elevation_mapping_demos/config/postprocessing/: postprocessor_pipeline.yaml
elevation_mapping_demos/config/robots/: leo.yaml
elevation_mapping_demos/elevation_mapping_demos/: tf_to_pose_publisher.py
elevation_mapping_demos/launch/: ground_truth_demo.launch  leo_demo.launch  leo_marsyard.launch.py  simple_demo.launch  turtlesim3_waffle_demo.launch
elevation_mapping_demos/rviz/: leo_marsyard.rviz
elevation_mapping_demos/scripts/: model_state_to_pose_and_tf.py  tf_to_pose_publisher.py
elevation_mapping_demos/urdf/: leo_rover_depthcam.urdf.xacro
