<?xml version="1.0"?>
<package format="2">
  <name>elevation_mapping_demos</name>
  <version>0.7.22</version>
  <description>Demonstrations for the elevation mapping framework.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/elevation_mapping</url>
  <url type="bugtracker">http://github.com/anybotics/elevation_mapping/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>

  <depend>elevation_mapping</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>rviz2</depend>
  <depend>ros_gz</depend>
  <depend>grid_map_visualization</depend>
  <depend>pcl_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_minimal_tb4_sim</depend>
  <depend>xacro</depend>

  <depend>leo_simulator</depend>
  <depend>depthai_descriptions</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

